[metadata]
name = Premarker
version = file: premarker.VERSION
author = Ethan Swan
author_email = eswan18@rocketmail.com
description = Command line tool to generate Remark.js presentations from markdown files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eswan18/premarker
project_urls =
    Bug Tracker = https://github.com/eswan18/premarker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    click
    jinja2
    pyyaml

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
lint = flake8
typecheck = mypy
tests =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    premarker = premarker.cli:premarker

[options.package_data]
premarker = templates/*

[flake8]
max-line-length = 88

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=premarker
