[metadata]
name = Premark
version = attr: premark.__version__
author = Ethan Swan
author_email = eswan18@rocketmail.com
description = Command line tool to generate Remark.js presentations from markdown files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eswan18/premark
project_urls =
    Bug Tracker = https://github.com/eswan18/premark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    click
    jinja2
    pyyaml

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
lint = flake8
typecheck =
    mypy
    types-setuptools
    types-PyYAML
test =
    pytest
    pytest-cov
tox =
    tox
    tox-pyenv
docs =
    sphinx
    myst-parser
dev =
    # All of the above
    mypy
    types-setuptools
    types-PyYAML
    pytest
    pytest-cov
    tox
    tox-pyenv
    sphinx
    myst-parser

[options.entry_points]
console_scripts =
    premark = premark.cli:premark

[options.package_data]
premark = templates/*

[flake8]
max-line-length = 88

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=premark
