[metadata]
name = Premark
version = attr: premark.__version__
author = Ethan Swan
author_email = eswan18@rocketmail.com
description = Generate single-file HTML presentations from one or many markdown files, using Remark.js.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eswan18/premark
project_urls =
    Bug Tracker = https://github.com/eswan18/premark/issues
    Documentation = https://premark.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    click
    jinja2
    pyyaml

[options.packages.find]
exclude =
    docs
    tests

[options.extras_require]
lint = flake8
typecheck =
    mypy
    types-setuptools
    types-PyYAML
test =
    pytest
    pytest-cov
tox =
    tox
    tox-pyenv
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser>=0.12.7
dev =
    # All of the above
    flake8
    mypy
    types-setuptools
    types-PyYAML
    pytest
    pytest-cov
    tox
    tox-pyenv
    sphinx
    sphinx-rtd-theme
    myst-parser>=0.12.7
    build
    twine

[options.entry_points]
console_scripts =
    premark = premark.cli:premark

[options.package_data]
premark = py.typed, templates/*

[flake8]
max-line-length = 88
